fixing spacing and adding text

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: white;
+    background-color: rgb(243, 243, 243);
 }
 .p-hero , .hero-btn, p, .ver-btn{
     font-family: 'Lato', sans-serif;
@@ -32,9 +32,10 @@ h2{
 }
 
 .container{
-    margin-top: 0px;
+    margin-top: -1px;
     width: 100%;
     height: 120vh;
+    min-height: 600px;
     position: relative;
     background-image: url(images/blue-hero-bg.svg);
     background-repeat: no-repeat;
@@ -108,6 +109,7 @@ h2{
     grid-template-columns:  1fr 5fr;
     width: 100%;
     height: 70vh;
+    min-height: 700px;
     padding-left: 80px;
 }
 .hero-text{
@@ -281,6 +283,9 @@ footer{
     .nav-bar{
         grid-template-columns: 1fr 3fr;
     }
+    .container{
+        height: 800px;
+    }
     .container-2{
         margin-bottom: 20px;
     }
@@ -314,10 +319,24 @@ footer{
 
 /*  TABLET VERTICAL*/  
   @media screen and (max-width: 768px) {
-      .container{
+    .container{
         overflow: hidden;
-      }
-      .container-2{
+        height: 750px;
+    }
+    .hero{
+        height: 600px;
+        min-height: 600px;
+    }
+    .text-cont{
+        width: 80%;
+    }
+    .hero-img{
+        width: 100%;
+    }
+    .top-text{
+        margin-bottom: 20px;
+    }
+    .container-2{
         margin-bottom: 100px;
     }
       .nav-bar{
@@ -358,30 +377,11 @@ footer{
         justify-self: center;
         width: 100px;
     }
-
-    .container{
-        height: 100vh;
-    }
-    .hero{
-        padding-left: 40px;
-        grid-template-rows: 1fr 5fr;
-    }
-    .text-cont{
-        width: 80%;
-    }
-    .hero-img{
-        width: 100%;
-    }
-    .top-text{
-        margin-bottom: 20px;
-       }
-       .first-service, .second-service, .third-service, .four-service{
+    .first-service, .second-service, .third-service, .four-service{
         grid-template-columns: 1fr;
         padding: 20px 40px;
         margin-bottom: 20px;
-        
-        
-    }
+}
     .serv{
         padding: 0 50px;
         grid-row-start: 1;
@@ -416,7 +416,7 @@ footer{
 /*MOBILE*/
   @media screen and (max-width: 500px){
       .container{
-          height: 110vh;
+          height: 750px;
       }
       .container-2{
         margin-bottom: 10px;
